Add dependency installation script

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -14,6 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: |
+          chmod +x ./dependencies/install.sh
+          ./dependencies/install.sh
     
     - name: Build
       run: make build
